--- a/lecture.html
+++ b/lecture.html
@@ -8,6 +8,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <style>
+            .home-button {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            }
+            .home-button a {
+            color: red;
+            text-decoration: none;
+            }
+            .home-button a:hover {
+            color: white;
+            }
+        </style>
+        <style>
             #exam {
             background-image: url("imgs/smallbird.png");
                 background-repeat: repeat-x;
@@ -18,9 +32,8 @@
         </style>
     </head>
 
-    <body id=exam text="#0033cc" bgcolor="#cc66ff" link="#0000EE" vlink="#551A8B" alink="#FF0000">
+    <body id=exam text="#0033cc" backgroundgcolor="#cc66ff" link="#0000EE" vlink="#551A8B" alink="#FF0000">
         <div class="container mt-3" class="bg-primary">
-            <!--<div class="media border p-3" class="bg-primary" >-->
             <br>
             <ol>
             <li><a href="lecture/HTML5">HTML5(파일없음)</a>
@@ -28,11 +41,12 @@
             <li><a href="lecture/jQuery.html/">jQuery(파일없음)</a>
             <li><a href="multi/multi.hwp">동영상사용법</a>
             </ol>
-            <!--</div>-->
+
         </div>
         <br>
-        <center><button type="button" class="btn btn-outline-primary"><a href="index.html">HOME</a></button></center>
-        <br><br><br><br><br><br><br><br><br>
+        <div class="home-button">
+      <button type="button" class="btn btn-outline-primary"><a href="index.html">HOME</a></button>
+    </div>
     </body>
 </html>
 
