--- a/midwav.html
+++ b/midwav.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
   <head>
-  <title>오디오교실</title>
+  <title>3308노예린 오디오</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <style>
+    .home-button {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .home-button a {
+      color: red;
+      text-decoration: none;
+    }
+    .home-button a:hover {
+      color: white;
+    }
+  </style>
   </head>
   <body bgcolor=#330000>
       <font color=blue>
         <center>
         <br>
-        <h3>컨트롤박스보이기</h3><br><br>
+        <h3>오디오</h3><br><br>
           <audio controls>
             <source src="multi/loveme.mp3" type="audio/mpeg">
           </audio>
         </center>
       </font>
     <br>
-    <center><button type="button"  class="btn btn-outline-primary"><a href="index.html">HOME</a></button></center>
+    <div class="home-button">
+      <button class="btn btn-outline-danger">
+        <a href="index.html">HOME</a>
+      </button>
+    </div>
   </body>
 </html>
