--- a/video.html
+++ b/video.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
     <head>
-    <title>Bootstrap Example</title>
+    <title>3308 노예린 비디오</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <style>
+            .home-button {
+              display: flex;
+              justify-content: center;
+              margin-top: 20px;
+            }
+            .home-button a {
+              color: red;
+              text-decoration: none;
+            }
+            .home-button a:hover {
+              color: white;
+            }
+          </style>
     </head>
 
     <body> 
@@ -53,6 +67,10 @@
         </div>
     </div>
     <br><br>
-    <center><button type="button" class="btn btn-outline-primary"><a href="index.html">HOME</a></button></center>
+    <div class="home-button">
+        <button class="btn btn-outline-danger">
+          <a href="index.html">HOME</a>
+        </button>
+      </div>
     </body>
 </html>
