--- a/map/myLoc.html
+++ b/map/myLoc.html
@@ -3,7 +3,11 @@
 <head>
 <title>어디를 가더라도 거기엔 여러분이 있습니다</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
+    <link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192"/>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -13,6 +17,9 @@
 <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIwcnmj5PcfmncGWA-OUCdLiZVQ1tDhZ4&callback=initMap&v=weekly"&gt;>
 </script>
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 
 <script src="myLoc.js"></script>
@@ -32,12 +39,15 @@
 	}
 </style>
 </head>
-<body>
-
-<form>
-<input type="button" id="watch" value="Watch me">
-<input type="button" id="clearWatch" value="Clear watch">
-</form>
+	<body>
+		<div data-role="header"
+		style="background:green; color:yellow; text-align:center;
+		text-valign:middle; height:25px; font-size:15pt; padding:20px;">
+		Map Tracker</div>
+  <form>
+  <input type="button" id="watch" value="Watch me">
+  <input type="button" id="clearWatch" value="Clear watch">
+  </form>
 
 <div id="location">
 여러분의위치가 여기에 나타날 것입니다.
