--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>3308노예린Bootstrap 4 Website Example</title>
+    <title>3308 노예린Bootstrap 4 Website Example</title>
     <meta charset="utf-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
-    <link rel="icon" type="image/png" href="imgs/icon.jpg" sizes="192x192" />
+    <link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-moblie-web-app-capable" content="yes" />
 
