--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/icon.png" />
     <link rel="icon" type="image/png" href="imgs/icon.png" sizes="192x192" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-moblie-web-app-capable" content="yes" />
@@ -36,6 +36,7 @@
     <style>
       body {
         padding-bottom: 50px;
+        background-color: ivory;
       }
       .fakeimg {
         display: flex;
@@ -90,7 +91,7 @@
   <body>
     <!--제목-->
     <div style="margin-top: 20px" align="center">
-      <h4>Bootstrap 4 를 이용한 페이지</h4>
+      <h4>My first Bootstrap 4 Project</h4>
     </div>
     <!--메뉴버튼-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
