--- a/table.html
+++ b/table.html
@@ -4,10 +4,10 @@
     <title>3308노예린_시간표</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
-    <link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192" />
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/icon.png" />
+    <link rel="icon" type="image/png" href="imgs/icon.png" sizes="192x192" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-moblie-web-app-capable" content="yes" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
